Inserimento post personale

--- a/client/app/src/main/res/layout/fragment_new_route_photos.xml
+++ b/client/app/src/main/res/layout/fragment_new_route_photos.xml
@@ -65,7 +65,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="AGGIUNGI FOTO"
+            android:text="Seleziona foto"
             app:layout_constraintBottom_toTopOf="@id/barrier3"
             app:layout_constraintEnd_toEndOf="@+id/textView"
             app:layout_constraintHorizontal_bias="0.5"
