Aggiunta funzionalità creazione post

--- a/client/app/src/main/res/layout/fragment_new_post.xml
+++ b/client/app/src/main/res/layout/fragment_new_post.xml
@@ -35,7 +35,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/routeTextField"
-                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
+                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:hint="Itinerario"
@@ -46,7 +46,9 @@
                 app:layout_constraintTop_toTopOf="@+id/guideline34"
                 app:layout_constraintVertical_chainStyle="packed">
 
-                <AutoCompleteTextView
+                <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                    android:id="@+id/autoComplete"
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="text" />
