Nuove funzionalità e miglioramenti aggiunti
Novità:
- Completata funzionalità di aggiunta post
- Completata funzionalità di aggiunta GPX (da testare)
- Completata migrazione dei blocchi di codice dipendenti altamente dai dati nei Repository, in questo modo si rispetta il ruolo dello strato di dominio (da migliorare i Model)
- Migliorato il mapping tra i Model di UI, Domain e Data (aggiunti altri model per raggiungere lo scopo)
- Migliorata interazione tra View e ViewModel per alcuni Fragment dove la logica non era stata ripartita correttamente
- Ripuliti gli Use Case

Da fare:
- Da rivedere la gestione degli errori, i valori restituiti, la visualizzazione degli errori e alcuni bug causati da FAB e Snackbar
- Creazione compilation
- Dettaglio itinerario
- Eliminazioni e modifiche varie a itinerari, post e compilation (facili)
- Aggiunta itinerario a compilation
- Chat

--- a/client/app/src/main/res/menu/top_bar_new_map_menu.xml
+++ b/client/app/src/main/res/menu/top_bar_new_map_menu.xml
@@ -9,4 +9,12 @@
         android:contentDescription="Cerca"
         app:showAsAction="always" />
 
+    <item
+        android:id="@+id/import_gpx"
+        android:title="Importa file GPX"
+        android:icon="@drawable/ic_baseline_file_upload_24"
+        android:contentDescription="Importa file GPX"
+        app:showAsAction="never"/>
+
+
 </menu>
