Aggiunta query per ricercare tramite area geografica e non solo attraverso il punto specifico Testato GPX Parser, funziona

--- a/client/app/src/main/res/layout/fragment_new_route_photos.xml
+++ b/client/app/src/main/res/layout/fragment_new_route_photos.xml
@@ -97,7 +97,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-        android:id="@+id/confirmRouteFab"
+        android:id="@+id/createRouteFab"
         style="?attr/extendedFloatingActionButtonSecondaryStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
