Aggiunta funzione di ricerca (mancano gli altri filtri)

--- a/client/app/src/main/res/layout/fragment_routes.xml
+++ b/client/app/src/main/res/layout/fragment_routes.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:logo="@drawable/ic_natour_logo"
-            app:menu="@menu/top_bar_main_menu" />
+            app:menu="@menu/top_bar_main_menu_search" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
