--- a/client/app/src/main/res/layout/fragment_profile.xml
+++ b/client/app/src/main/res/layout/fragment_profile.xml
@@ -8,8 +8,7 @@
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:elevation="0dp"
-        app:liftOnScroll="false">
+        app:liftOnScroll="true">
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/topAppBar"
@@ -94,6 +93,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/settings_chip"
             tools:ignore="SpeakableTextPresentCheck" />
+
+        <View
+            android:layout_width="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/tab_layout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/viewPager"
+            android:layout_height="5dp"
+            android:background="@drawable/shadow_tab"/>
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewPager"
