--- a/client/app/src/main/res/menu/top_bar_owner_route_menu.xml
+++ b/client/app/src/main/res/menu/top_bar_owner_route_menu.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/delete_post"
-        android:contentDescription="Rimuovi post"
+        android:id="@+id/delete_route"
+        android:contentDescription="Rimuovi itinerario"
         android:icon="@drawable/ic_outline_delete_24"
-        android:title="Rimuovi post"
+        android:title="Rimuovi itinerario"
         app:showAsAction="always" />
 
 </menu>
