--- a/client/app/src/main/res/navigation/mobile_navigation.xml
+++ b/client/app/src/main/res/navigation/mobile_navigation.xml
@@ -233,6 +233,9 @@
                 android:name="authorId"
                 app:argType="long" />
         </fragment>
+        <action
+            android:id="@+id/action_global_navigation_post_details"
+            app:destination="@id/navigation_post_details" />
 
     </navigation>
 
