--- a/client/app/src/main/res/layout/fragment_route_details_info.xml
+++ b/client/app/src/main/res/layout/fragment_route_details_info.xml
@@ -32,11 +32,11 @@
             android:text="Titolo itinerario"
             android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
             android:textColor="?attr/colorPrimary"
-            app:layout_constraintWidth_percent="0.9"
             app:layout_constraintBottom_toBottomOf="@id/barrier6"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/routeImageSlider" />
+            app:layout_constraintTop_toBottomOf="@id/routeImageSlider"
+            app:layout_constraintWidth_percent="0.9" />
 
         <ImageView
             android:id="@+id/chat_button"
@@ -135,6 +135,7 @@
             android:layout_height="wrap_content"
             android:padding="8dp"
             android:src="@drawable/ic_baseline_warning_amber_24"
+            app:layout_constraintBottom_toBottomOf="@id/barrier12"
             app:layout_constraintEnd_toStartOf="@+id/warningTextView"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -150,6 +151,7 @@
             android:text="Informazioni non esatte o non aggiornate"
             android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
             android:textColor="#EBCB8B"
+            app:layout_constraintBottom_toBottomOf="@id/barrier12"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/warningImage"
             app:layout_constraintTop_toBottomOf="@id/barrier11" />
