--- a/client/app/src/main/res/menu/top_bar_new_map_menu.xml
+++ b/client/app/src/main/res/menu/top_bar_new_map_menu.xml
@@ -4,17 +4,23 @@
 
     <item
         android:id="@+id/search_place"
-        android:title="Cerca"
-        android:icon="@drawable/ic_baseline_search_24"
         android:contentDescription="Cerca"
+        android:icon="@drawable/ic_baseline_search_24"
+        android:title="Cerca"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/import_gpx"
-        android:title="Importa file GPX"
-        android:icon="@drawable/ic_baseline_file_upload_24"
         android:contentDescription="Importa file GPX"
-        app:showAsAction="never"/>
+        android:icon="@drawable/ic_baseline_file_upload_24"
+        android:title="Importa file GPX"
+        app:showAsAction="never" />
 
+    <item
+        android:id="@+id/clear_map"
+        android:contentDescription="Rimuovi tutti i marker inseriti"
+        android:icon="@drawable/ic_baseline_cleaning_services_24"
+        android:title="Rimuovi tutti i maker"
+        app:showAsAction="never" />
 
 </menu>
