--- a/client/app/src/main/res/layout/fragment_new_route_info.xml
+++ b/client/app/src/main/res/layout/fragment_new_route_info.xml
@@ -33,7 +33,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context=".feature_route.new_route.NewRouteInfoFragment">
+            tools:context=".feature_route.create_route.CreateRouteInfoFragment">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/routeTitleTextField"
