--- a/client/app/src/main/res/layout/fragment_confirmation.xml
+++ b/client/app/src/main/res/layout/fragment_confirmation.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".feature_auth.registration.ConfirmationFragment">
+    tools:context=".feature_auth.registration.confirmation.ConfirmationFragment">
 
     <ImageView
         android:id="@+id/confirmationImage"
