--- a/client/app/src/main/res/layout/fragment_new_post.xml
+++ b/client/app/src/main/res/layout/fragment_new_post.xml
@@ -32,7 +32,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:context=".feature_route.create_route.CreateRouteInfoFragment">
+            tools:context=".feature_route.create_route.info.CreateRouteInfoFragment">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/routeTextField"
