--- a/client/app/src/main/res/layout/fragment_new_route_photos.xml
+++ b/client/app/src/main/res/layout/fragment_new_route_photos.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".feature_route.create_route.CreateRoutePhotosFragment">
+    tools:context=".feature_route.create_route.photos.CreateRoutePhotosFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
